# beam-connect

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md
.github/workflows/: dockerhub_readme.yml  rust.yml
conf/: targets.conf.template  targets.conf.template-demo
config/: target_resources.conf
dev/: docker-compose.yml  start  test  test.py
dev/pki/: pki
examples/: example_central_mapping.json  example_central_test.json  example_local_targets.json  example_local_test.json
src/: banner.rs  config.rs  errors.rs  example_targets.rs  logic_ask.rs  logic_reply.rs  main.rs  msg.rs  sockets.rs  structs.rs
tests/: base_tests.rs
tests/common/: mod.rs
