[package]
name = "connect"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
beam-lib = { git = "https://github.com/samply/beam", branch="develop", features = ["strict-ids"] }

tokio = { version = "1", features = ["macros","rt-multi-thread","signal"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0", features = ["trace"] }
tower = "*"

# HTTP client with proxy support
hyper-tls = "0.5.0"
hyper-proxy = "0.9.1"
mz-http-proxy = { version = "0.1.0", features = ["hyper"] }

tracing = "0.1.35"

serde = "*"
serde_json = "*"
hyper_serde = "0.13"

clap = { version = "4", features = ["derive", "env"] }

thiserror = "*"
http-serde = "1.1.2"
tokio-native-tls = "0.3.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11.19", features = ["json"] }
anyhow = "1"
openssl = "*" # Already used by native_tls which does not reexport it. This is used for b64 en/decode

[features]
sockets = []

[build-dependencies]
build-data = "0"

[dev-dependencies]
futures-util = "0.3.28"
paste = "1.0.12"
tokio-tungstenite = "0.19.0"
