[package]
name = "beam-connect"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
beam-lib = { git = "https://github.com/samply/beam", branch="fix/relative-urls", features = ["strict-ids"] }

tokio = { version = "1", features = ["macros","rt-multi-thread","signal"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-graceful", "server-auto"]}
http-body-util = { version = "0.1" }
futures-util = { version = "0.3", optional = true, default-features = false }

# HTTP client with proxy support
reqwest = { version = "0.12", features = ["json", "stream"] }

tracing = "0.1"

serde = "*"
serde_json = "*"

clap = { version = "4", features = ["derive", "env"] }

thiserror = "*"
http-serde = "2"
tokio-native-tls = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
openssl = "*" # Already used by native_tls which does not reexport it. This is used for b64 en/decode

[features]
sockets = ["beam-lib/sockets", "dep:futures-util"]

[build-dependencies]
build-data = "0"

[dev-dependencies]
once_cell = "1"
futures-util = "0.3"
paste = "1"
tokio-tungstenite = "0.21"
